--- a/part3-phonebook/package.json
+++ b/part3-phonebook/package.json
@@ -18,6 +18,8 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^1.12.2",
-    "express": "^5.1.0"
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "morgan": "^1.10.1"
   }
 }
