--- a/part3-phonebook/package.json
+++ b/part3-phonebook/package.json
@@ -9,6 +9,7 @@
     "dev": "node --watch index.js",
     "build:ui": "rm -rf dist && cd ../part2-phonebook && npm run build && cp -r dist ../part3-phonebook",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push",
+    "chrome:debug": "node --inspect index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
