--- a/part3-phonebook/package.json
+++ b/part3-phonebook/package.json
@@ -23,6 +23,8 @@
     "axios": "^1.12.2",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "mongodb": "^6.20.0",
+    "mongoose": "^8.18.3",
     "morgan": "^1.10.1"
   }
 }
