--- a/part3-phonebook/.env
+++ b/part3-phonebook/.env
@@ -2,3 +2,5 @@ MONGODB_USER=cesarhernanruscica_db_user
 MONGODB_PASS=QF5CXDpEFqFOrRI2
 MONGODB_URI=mongodb+srv://cesarhernanruscica_db_user:QF5CXDpEFqFOrRI2@cluster0.o4s8syp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT=3000
+
+# QF5CXDpEFqFOrRI2 password correct
