--- a/part3-phonebook/package.json
+++ b/part3-phonebook/package.json
@@ -10,7 +10,8 @@
     "build:ui": "rm -rf dist && cd ../part2-phonebook && npm run build && cp -r dist ../part3-phonebook",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push",
     "chrome:debug": "node --inspect index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ."
   },
   "keywords": [
     "node",
@@ -27,5 +28,12 @@
     "mongodb": "^6.20.0",
     "mongoose": "^8.18.3",
     "morgan": "^1.10.1"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.37.0",
+    "@stylistic/eslint-plugin": "^5.4.0",
+    "eslint": "^9.37.0",
+    "globals": "^16.4.0",
+    "typescript-eslint": "^8.46.0"
   }
 }
