--- a/part4-blog/.env
+++ b/part4-blog/.env
@@ -1,4 +1,5 @@
-MONGODB_URI=mongodb+srv://cesarhernanruscica_db_user:QF5CXDpEFqFOrRI2@cluster0.o4s8syp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://cesarhernanruscica_db_user:QF5CXDpEFqFOrRI2@cluster0.o4s8syp.mongodb.net/blogList?retryWrites=true&w=majority&appName=Cluster0
+TEST_MONGODB_URI=mongodb+srv://cesarhernanruscica_db_user:QF5CXDpEFqFOrRI2@cluster0.o4s8syp.mongodb.net/test?retryWrites=true&w=majority&appName=Cluster0
 MONGODB_USER=cesarhernanruscica_db_user
 MONGODB_PASS=QF5CXDpEFqFOrRI2
 PORT=3000
