--- a/part4-blog/package.json
+++ b/part4-blog/package.json
@@ -4,9 +4,10 @@
   "description": "part4 for the FullStackOpen course",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "node --watch index.js",
-    "test": "node --test"
+    "start": "NODE_ENV='production' node index.js",
+    "dev": "NODE_ENV='development' node --watch index.js",
+    "test": "NODE_ENV='test' node --test",
+    "test_blogs": "NODE_ENV='test' node --test --test-name-pattern='blog posts in the JSON format'"
   },
   "keywords": [
     "fullstackopen",
@@ -23,5 +24,8 @@
     "express": "^5.1.0",
     "mongodb": "^6.20.0",
     "mongoose": "^8.19.1"
+  },
+  "devDependencies": {
+    "supertest": "^7.1.4"
   }
 }
